--- a/static/style.css
+++ b/static/style.css
@@ -67,6 +67,38 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
+#inputArea {
+  margin-top: -6vw;
+  color: #fff;
+  font-family: 'Fira Code';
+  font-size: 15vw;
+  line-height: 12vw;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 0px 5px 4px rgba(255, 255, 255, 0.5);
+  background-color: rgba(0,0,0,0);
+  border: none;
+}
+
+#inputTextArea {
+  color: #fff;
+  font-family: 'Fira Code';
+  line-height: 2vw;
+  font-weight: bold;
+  text-align: left;
+  text-shadow: 0px 5px 4px rgba(255, 255, 255, 0.5);
+  background-color: rgba(0,0,0,0);
+  outline: none;
+  border-style:  solid;
+  border-color: black;
+  border-width: 1px;
+  border-radius: 15px;
+  border: 1px #000 solid;
+  padding: 5px 5px 5px 25px;
+  top: 0;
+  left: 0;
+}
+
 .button {
     border: none;
     border-radius: 5px;
