--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,9 @@
         
         <ul id="bookmarksContainer">
             <div class="bookmark" id="b1"><a href="https://github.com" id="aB1"><img src="{{ url_for('static', filename='/assets/github.svg') }}" id="imgB1"></a></div>
-            <div class="bookmark" id="b2"><a href="https://web.whatsapp.com" id="aB2"><img src="{{ url_for('static', filename='/assets/whatsapp.svg') }}" id="imgB2"></a></div>
+            <div class="bookmark" id="b2"><a href="https://www.twitter.com" id="aB2"><img src="{{ url_for('static', filename='/assets/twitter.svg') }}" id="imgB2"></a></div>
             <div class="bookmark" id="b3"><a href="https://www.youtube.com" id="aB3"><img src="{{ url_for('static', filename='/assets/youtube.svg') }}" id="imgB3"></a></div>
-            <div class="bookmark" id="b4"><a href="https://gmail.com" id="aB4"><img src="{{ url_for('static', filename='/assets/gmail.svg') }}" id="imgB4"></a></div>
+            <div class="bookmark" id="b4"><a href="https://mail.google.com/mail/u/1/#inbox" id="aB4"><img src="{{ url_for('static', filename='/assets/gmail.svg') }}" id="imgB4"></a></div>
             <div class="bookmark" id="b5"><img src="{{ url_for('static', filename='/assets/settings.svg') }}"></div>
         </ul>
 
@@ -62,7 +62,7 @@
                     <div style="width: 60%;text-align: center;">Link</div>
                 </div>
                 <div>b1 <input type="text" class="inputField" id="imgB1Setting" style="width: 40%;" value="{{ url_for('static', filename='/assets/github.svg') }}"> <input type="text" class="inputField" id="aB1Setting" style="width: 40%;" value="https://github.com"></div>
-                <div>b2 <input type="text" class="inputField" id="imgB2Setting" style="width: 40%;" value="{{ url_for('static', filename='/assets/whatsapp.svg') }}"> <input type="text" class="inputField" id="aB2Setting" style="width: 40%;" value="https://web.whatsapp.com"></div>
+                <div>b2 <input type="text" class="inputField" id="imgB2Setting" style="width: 40%;" value="{{ url_for('static', filename='/assets/twitter.svg') }}"> <input type="text" class="inputField" id="aB2Setting" style="width: 40%;" value="https://www.twitter.com"></div>
                 <div>b3 <input type="text" class="inputField" id="imgB3Setting" style="width: 40%;" value="{{ url_for('static', filename='/assets/youtube.svg') }}"> <input type="text" class="inputField" id="aB3Setting" style="width: 40%;" value="https://youtube.com"></div>
                 <div>b4 <input type="text" class="inputField" id="imgB4Setting" style="width: 40%;" value="{{ url_for('static', filename='/assets/gmail.svg') }}"> <input type="text" class="inputField" id="aB4Setting" style="width: 40%;" value="https://gmail.com"></div>
             </div>
